@@ -9,6 +9,7 @@ Bugfixes:
 * OPENDNSSEC-481: libhsm: Fix an off-by-one length check error.
 * OPENDNSSEC-482: libhsm: Improved cleanup for C_FindObjects.
 * OPENDNSSEC-515: Signer Engine: Don't replace tabs in RRs with whitespace.
+* OPENDNSSEC-538: libhsm: Possible memory corruption in hsm_get_slot_id.
 
 
 OpenDNSSEC 1.3.16 - 2013-12-04
